<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto">

	<item
			android:id="@+id/action_search"
			android:title="@string/action_search"
			android:icon="@drawable/ic_search"
			app:showAsAction="always|collapseActionView"
			app:actionViewClass="androidx.appcompat.widget.SearchView" />

	<item
			android:id="@+id/action_scroll"
			android:icon="@drawable/ic_arrow_down"
			android:title="@string/action_scroll"
			app:showAsAction="always|collapseActionView" />

	<item
			android:id="@+id/action_filter"
			android:icon="@drawable/ic_filter"
			android:title="@string/action_filter"
			app:showAsAction="always|collapseActionView" />

	<item
			android:id="@+id/action_share_visible"
			android:icon="@drawable/ic_share"
			android:title="@string/action_share_visible"
			app:showAsAction="never" />

	<item
			android:id="@+id/action_share_all"
			android:icon="@drawable/ic_share"
			android:title="@string/action_share_all"
			app:showAsAction="never" />
</menu>